--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 knn.joblib filter=lfs diff=lfs merge=lfs -text
 rf.joblib filter=lfs diff=lfs merge=lfs -text
+covtype.data filter=lfs diff=lfs merge=lfs -text
